--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {
     "gatsby": "^2.23.10",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
+    "react-spring": "^8.0.27"
   },
   "devDependencies": {
     "prettier": "2.0.5"
