--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "dependencies": {
     "gatsby": "^2.23.10",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-react-helmet": "^3.3.6",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sitemap": "^2.4.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
