--- a/package.json
+++ b/package.json
@@ -16,11 +16,19 @@
   "dependencies": {
     "gatsby": "^2.23.10",
     "gatsby-cli": "^2.12.58",
+    "gatsby-image": "^2.4.16",
     "gatsby-plugin-layout": "^1.3.8",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.6.27",
     "gatsby-plugin-sitemap": "^2.4.7",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^3.3.25",
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-remark": "^2.8.28",
+    "gatsby-transformer-sharp": "^2.5.13",
+    "hast-to-hyperscript": "^9.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
